--- a/rokawoo-react-website/src/components/Navbar/Navbar.module.css
+++ b/rokawoo-react-website/src/components/Navbar/Navbar.module.css
@@ -15,6 +15,7 @@
 }
 
 .title {
+  position: relative;
   font-size: 30px;
   font-weight: 600;
   text-decoration: none;
