--- a/rokawoo-react-website/src/components/Projects/Projects.module.css
+++ b/rokawoo-react-website/src/components/Projects/Projects.module.css
@@ -13,6 +13,7 @@
 }
 
 .title {
+  position: relative;
   font-size: 35px;
   font-weight: 700;
   letter-spacing: 1.75px;
